# edh-sim

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  binpack.py  cards.py  main.py  mulligan.py  optimizer.py  overnight.py  pyproject.toml  run_final.py  sim_core.py  sweep.py
docs/: methodology.md
docs/superpowers/plans/: 2026-07-09-edh-mana-curve-sim.md
docs/superpowers/specs/: 2026-07-09-edh-mana-curve-sim-design.md
scripts/: check_lines.py  make_weights_svg.py
tests/: test_cli.py  test_cumulative.py  test_from_hand.py  test_game.py  test_gameplay.py  test_integration.py  test_library.py  test_mulligan.py  test_mulligan_adaptive.py  test_neighbors.py  test_opening.py  test_prng.py  test_regression.py  test_scoring.py  test_search.py
