[project]
name = "edh-sim"
version = "0.1.0"
description = "Replication of Karsten's Commander mana-curve experiment"
requires-python = ">=3.11"
dependencies = ["numba>=0.59", "numpy>=1.26"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = ["slow: Monte Carlo / optimizer tests (deselect with -m 'not slow')"]
addopts = "-m 'not slow'"
