[project]
name = "edh-sim"
version = "0.1.0"
description = "Replication of Karsten's Commander mana-curve experiment"
requires-python = ">=3.11"
dependencies = ["numba>=0.59", "numpy>=1.26"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.pytest.ini_options]
markers = ["slow: Monte Carlo / optimizer tests (deselect with -m 'not slow')"]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade, B bugbear, PLR* pylint refactor.
select = ["E", "F", "I", "UP", "B", "PLR"]
# max-file-lines is enforced separately (scripts/check_lines.py, 500-line cap).
# complexity metrics (PLR09xx) off: the njit game engine has inherently large fns.
ignore = ["E741", "PLR2004", "PLR0913", "PLR0911", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR", "E702"]   # compact one-line test fixtures use semicolons
